<resources>
    <string name="app_name">Read Chat</string>

    <string name="text_view_sign_up">Crear cuenta en ReadChat</string>
    <string name="text_view_forgot_password">Vaya … he olvidado mi contraseña</string>
    <string name="button_iniciar_sesión_email">Iniciar Sesion</string>
    <string name="button_iniciar_sesion_google">Iniciar Sesion con Google</string>
    <string name="edit_text_hint_user">Nombre de Usuario</string>
    <string name="edit_text_hint_email">Correo Electrónico</string>
    <string name="edit_text_hint_password">Contraseña</string>
    <string name="edit_text_hint_confirm_password">Confirmar Contraseña</string>
    <string name="button_back_login">Volver al Login</string>
    <string name="button_sign_up">Registrarme</string>
    <string name="text_view_title_sign_up">Registrarse ahora</string>
    <string name="text_view_no_tiene_cuenta">¿No tienes cuenta?</string>
    <string name="text_view_regístrate">Registrate aqui</string>
    <string name="edit_text_email_forgot_password">Correo Electrónico</string>
    <string name="chat_create_info">La siguiente opción permitira que tu aplicación tenga chat o no. En este chat se agregaran a todos aquellos Usuarios que agregen a favoritos esta publicación</string>
    <string name="button_resend_email">Volver a enviar</string>
    <string name="button_ok">Aceptar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="title_dialog_forgot_password">Restablecer Contraseña</string>
    <string name="nickname">Nickname</string>
    <string name="fullname">Nombre completo</string>
    <string name="description">Descripción</string>
    <string name="title">Título</string>
    <string name="save_changes_edit_profile">Guardar Cambios</string>
    <string name="back_to_home">Volver al inicio</string>
    <string name="save_changes">Guarda los cambios para salir</string>
    <string name="changes_save_correctly">Los cambios se han guardado correctamente</string>
    <string name="not_have_changes_to_save">No hay cambios que guardar</string>
    <string name="cant_save_changes">No se han podido guardar los cambios, intentelo mas tarde.</string>
    <string name="book_title">Título</string>
    <string name="book_category">Categoría:</string>
    // Snackbars / Toast
    <string name="snackbar_confirm_email">Revisa tu correo, y confirma el email</string>
    <string name="snackbar_need_register">Error, compreba que hayas introducido tus datos correctamente</string>
    <string name="snackbar_email_confirm_send">Te acabamos de mandar un email de confirmacion</string>
    <string name="snackbar_email_change_password">Te acabamos de mandar un email para tu cambio de contraseña vinculado al correo </string>
    <string name="snackbar_unexpected_error_register">Ha habido un error inesperado, vuelve a intentarlo</string>
    <string name="write_all_data">Porfavor rellena los campos</string>
    <string name="snack_bar_resend">Reenviar</string>
    <string name="snack_bar_fill_all_fields">Rellena todos los campos</string>
    <string name="snack_bar_post_great_create">La publicación se creo correctamente</string>
    <string name="snack_bar_post_error_create">Error al crear la publicación</string>
    <string name="snack_bar_check_email">Revisa tu correo</string>
    <string name="error_email_is_not_valid">El email no es valido</string>
    <string name="error_email_is_empty">Rellena el campo email, intentelo de nuevo</string>
    <string name="error_password_is_not_valid">1-minúscula, 1-mayúscula, 1-número y mínimo 6 caracteres</string>
    <string name="error_confirm_password_is_not_valid">Los campos CONTRASEÑA y CONFIRMAR CONTRASEÑA no son iguales</string>
    //Categories
    <string name="category_science_fiction">Ciencia Ficcion</string>
    <string name="category_fantasy">Fantasia</string>
    <string name="category_novel">Novela</string>
    <string name="category_adventure">Aventura</string>
    <string name="category_humor">Humor</string>
    <string name="category_self_help">Autoayuda</string>
    <string name="category_autobiographical">Autobiográficos</string>
    <string name="category_scientists">Científicos</string>
    <string name="category_sport">Deporte</string>
    <string name="category_mystery">Misterio</string>
    <string name="category_fan_fics">Fanfics</string>
    // Dialog
    <string name="dialog_new_title">Nuevo título...</string>
    <string name="post_title_add">Titulo de la Publicación</string>
    <string name="post_description_add">Descripción de la Publicación</string>
    <string name="create_post">Crear publicación</string>
    <string name="dialog_new_description">Nueva descripción...</string>

    <string name="search">Buscar...</string>
    <string name="category">Category:</string>
    <string name="votes">Votos</string>
    <string name="books">Libros</string>
    <string name="delete_chaper">Eliminar capítulo</string>
    // Errors
    <string name="show_profile">Ver Perfil</string>
    <string name="new_message">Nuevo mensaje...</string>
    <string name="begin_write_chapter">Empieza a escribir tu capítulo...</string>

    // NavigationDrawer
    <string name="nav_open_drawer">Navigation is open</string>
    <string name="nav_close_drawer">Navigation is close</string>

    // Dialogs
    <string name="logout_want_it">¿Quieres cerrar sesión?</string>
    <string name="revise_you_email">Revisa tu correo:</string>
    <string name="title_new_chapter">¿Como quieres titular el capítulo?</string>
    <string name="add_title_chapter">Título del capítulo</string>
    // Header
    <string name="complete_you_profile">Completa tu perfil</string>
    // Fragment Profile
    <string name="followers">Seguidores: </string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="created_on">Con nosotros desde:</string>
    <string name="complete_your_profile">Completa tu perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_book">Crear libro</string>
    <string name="check_box_chat">¿Deseas agregar chat?</string>
    // Titles
    <string name="title_chat">Chats</string>
    <string name="title_add_post_book">Añadir publicación</string>
    <string name="title_fav_posts">Libros favoritos</string>
    <string name="title_my_posts">Mis publicaciones</string>
    <string name="title_my_profile">Mi perfil</string>
    <string name="title_detail_post">Detalles de la publicación</string>
    // Navigation Drawer
    <string name="item_home">Inicio</string>
    <string name="item_my_books">Mis libros</string>
    <string name="item_add_book">Añadir publicación</string>
    <string name="item_fav_books">Libros favoritos</string>
    <string name="item_chat">Chats</string>
    <string name="item_profile">Perfil</string>
    <string name="item_logout">Cerrar sesión</string>
    <string name="item_space_other">Otros</string>
    // Post
    <string name="post_not_have_post">No hay publicaciones...</string>
    <string name="post_have_posts">Publicaciones</string>
    <string name="post_not_have_description">Esta publicación no tiene descripción...</string>
    // User
    <string name="user_not_have_description">Este usuario no tiene descripción...</string>
    <string name="current_user_not_have_description">Aún no tienes descripción...</string>
    // Chapter
    <string name="chapter_not_have_chapter">Esta publicación no tiene capítulos aún...</string>
    <string name="chapter_have_chapter">Capítulos</string>
</resources>