<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_blue"
            android:title="@string/item_home"/>
        <item
            android:id="@+id/nav_my_books"
            android:icon="@drawable/ic_my_books_blue"
            android:title="@string/item_my_books"/>
        <item
            android:id="@+id/nav_create_book"
            android:icon="@drawable/ic_add_book_blue"
            android:title="@string/item_add_book"/>
        <item
            android:id="@+id/nav_fav_books"
            android:icon="@drawable/ic_fav_books"
            android:title="@string/item_fav_books"/>
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat_blue"
            android:title="@string/item_chat"/>
    </group>

    <item android:title="@string/item_space_other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile_blue"
                    android:title="@string/item_profile"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout_blue"
                    android:title="@string/item_logout"/>
            </group>
        </menu>
    </item>
</menu>